--- a/3-my-exercise-solutions/lesson-05/5r.html
+++ b/3-my-exercise-solutions/lesson-05/5r.html
@@ -1,114 +1,111 @@
 <!DOCTYPE html>
 <html>
-
-<head></head>
-<!-- Editor keeps indenting lines below <button> by 4 instead of 2 -->
-<!-- Editor keeps indenting lines below console.log() by 2 instead of 0 -->
-
-<body>
-  <title>Calculator</title>
-  <p>
-    <button onclick="
+  <head></head>
+  <!-- Editor keeps indenting lines below <button> by 4 instead of 2 -->
+  <!-- Editor keeps indenting lines below console.log() by 2 instead of 0 -->
+  <body>
+    <title>Calculator</title>
+    <p>
+      <button onclick="
         calculation += '1';
         console.log(calculation);
       ">1</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '2';
         console.log(calculation);
       ">2</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '3';
         console.log(calculation);
       ">3</button>
 
-    <button onclick="
+      <button onclick="
         calculation += ' + ';
         console.log(calculation);
       ">+</button>
-  </p>
+    </p>
 
-  <p>
-    <button onclick="
+    <p>
+      <button onclick="
         calculation += '4';
         console.log(calculation);
       ">4</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '5';
         console.log(calculation);
       ">5</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '6';
         console.log(calculation);
       ">6</button>
 
-    <button onclick="
+      <button onclick="
         calculation += ' - ';
         console.log(calculation);
       ">-</button>
-  </p>
+    </p>
 
-  <p>
-    <button onclick="
+    <p>
+      <button onclick="
         calculation += '7';
         console.log(calculation);
-    ">7</button>
+      ">7</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '8';
         console.log(calculation);
       ">8</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '9';
         console.log(calculation);
       ">9</button>
 
-    <button onclick="
+      <button onclick="
         calculation += ' * ';
         console.log(calculation);
       ">*</button>
-  </p>
+    </p>
 
-  <p>
-    <button onclick="
+    <p>
+      <button onclick="
         calculation += '0';
         console.log(calculation);
       ">0</button>
 
-    <button onclick="
+      <button onclick="
         calculation += '.';
         console.log(calculation);
       ">.</button>
 
-    <button onclick="
-        // Note: eval() takes a string and runs it as code.
-        // Avoid using eval() in real world projects since
-        // it can potentially be given harmful code to run.
-        // Only use eval() for learning purposes.
+      <!-- Note: eval() takes a string and runs it as code. -->
+      <!-- Avoid using eval() in real world projects since  -->
+      <!-- it can potentially be given harmful code to run. -->
+      <!-- Only use eval() for learning purposes.           -->
+      <button onclick="
         calculation = eval(calculation);
         console.log(calculation);
       ">=</button>
 
-    <button onclick="
+      <button onclick="
         calculation += ' / ';
         console.log(calculation);
       ">'/'</button>
-  </p>
+    </p>
 
-  <p>
-    <button onclick="
+    <p>
+      <button onclick="
         calculation = '';
         console.log(calculation);
       ">Clear</button>
-  </p>
+    </p>
 
-  <script>
-    let calculation = '';
-  </script>
-</body>
-
+    <script>
+      let calculation = '';
+    </script>
+  </body>
 </html>
