Completed Lesson 8a-8g and started 8h

--- a/3-my-exercise-solutions/lesson-07/7g.html
+++ b/3-my-exercise-solutions/lesson-07/7g.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Convert Temperature</title>
+    <title>Convert Length</title>
   </head>
   <body>
     <script>
