--- a/3-my-exercise-solutions/lesson-08/8h.html
+++ b/3-my-exercise-solutions/lesson-08/8h.html
@@ -41,7 +41,7 @@
       <button onclick="
         calculation = eval(calculation);
         console.log(calculation);
-        localStorage.setItem('calc', JSON.stringify(calculation));
+        localStorage.setItem('calc', calculation);
       ">=</button>
       
       <button onclick="updateCalculation(' / ');">/</button>
@@ -59,13 +59,13 @@
       /*
       HTML style comments do not work within <script> section
       */
-      let calculation = JSON.parse(localStorage.getItem('calc')) || '';
+      let calculation = localStorage.getItem('calc') || '';
 
       function updateCalculation(key) {
       
         calculation += key;  
-        localStorage.setItem('calc', JSON.stringify(calculation));
         console.log(calculation);
+        localStorage.setItem('calc', calculation);
       }
     </script>
   </body>
