Update 8h.html - Add console.log of calculation after loading

--- a/3-my-exercise-solutions/lesson-08/8h.html
+++ b/3-my-exercise-solutions/lesson-08/8h.html
@@ -60,7 +60,8 @@
       HTML style comments do not work within <script> section
       */
       let calculation = localStorage.getItem('calc') || '';
-
+      console.log(calculation);
+      
       function updateCalculation(key) {
       
         calculation += key;  
