Exercise 10i align-items center & L justify

--- a/3-my-exercise-solutions/lesson-10/10i.html
+++ b/3-my-exercise-solutions/lesson-10/10i.html
@@ -47,6 +47,8 @@
         border-width: thin;
         padding: 2px;
         cursor: pointer;
+        align-items: center;
+        justify-content: left;
       }
     </style>
   </head>
