Exercise 11h array declared in function then returned

--- a/3-my-exercise-solutions/lesson-11/11h.html
+++ b/3-my-exercise-solutions/lesson-11/11h.html
@@ -6,8 +6,7 @@
     <title>11g</title>
 
 <!--    <link rel="stylesheet" href="file.css"> -->
-    
-  </head>
+  <head>
   <body>
 
 <!--    <script src="file.js"></script> -->
