Update 11j.html - Fixed </head> tag

--- a/3-my-exercise-solutions/lesson-11/11j.html
+++ b/3-my-exercise-solutions/lesson-11/11j.html
@@ -6,7 +6,7 @@
     <title>11j</title>
 
 <!--    <link rel="stylesheet" href="file.css"> -->
-  <head>
+  </head>
   <body>
 
 <!--    <script src="file.js"></script> -->
