--- a/3-my-exercise-solutions/lesson-11/11m.html
+++ b/3-my-exercise-solutions/lesson-11/11m.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11k</title>
+    <title>11m</title>
 
 <!--    <link rel="stylesheet" href="file.css"> -->
   </head>
