Exercises 12b - 12c 12-advanced-functions.html with added comments

--- a/3-my-exercise-solutions/lesson-12/12b.html
+++ b/3-my-exercise-solutions/lesson-12/12b.html
@@ -29,9 +29,9 @@
 
       //This is a function call
       //It calls function runTwice(fun) 
-      //It passes anonymous function to print 12b
+      //It passes regular (has function keyword) anonymous function to print 12b
       runTwice(
-        // Anonymous function has no name
+        // Regular anonymous function
         function () { console.log('12b'); }
       );
 
