Exercise 12j - Change name of function to multiply

--- a/3-my-exercise-solutions/lesson-12/12j.html
+++ b/3-my-exercise-solutions/lesson-12/12j.html
@@ -13,12 +13,12 @@
 <!--    <script src="file.js"></script> -->
 
     <script>
-      const arrowFunctionMultiply = (param1, param2) => {
+      const multiply = (param1, param2) => {
         return param1 * param2;
       }
 
-      console.log(arrowFunctionMultiply(8, 9));
-      console.log(arrowFunctionMultiply(10,-23));
+      console.log(multiply(8, 9));
+      console.log(multiply(10,-23));
 
     </script>
   </body>
