--- a/3-my-exercise-solutions/lesson-12/12o.html
+++ b/3-my-exercise-solutions/lesson-12/12o.html
@@ -15,11 +15,21 @@
     <script>
 
       const foods = ['egg', 'apple','egg', 'egg', 'ham']   // => ['apple', 'ham']
-      const result = [];
-      const removeLimit = 2;
+      let result = [];
+      let removeLimit = 2;
       result = foods.filter((value, index) => { 
-        return value != 'egg' || !removeLimit-- 
-});
+        // If remove limit is 0 always return true
+        // If removeLimit > 0 && value === 'egg' removeLimit-- and return false
+        if (removeLimit <= 0) {
+          return true;
+        } else {
+          if (value === 'egg') {
+            removeLimit--;
+            return false;
+          } else {
+            return true;
+          }
+        }});
       console.log(result);
 
     </script>
