--- a/3-my-exercise-solutions/lesson-12/12i.html
+++ b/3-my-exercise-solutions/lesson-12/12i.html
@@ -35,16 +35,12 @@
 
       // setInterval takes an anonymous function and a timeout value
       // In this case the system will log "(X) New Messages" every 1 second
-      setInterval(
-
-      function() {
- 
+      setInterval(() => {
         if (messageCount === 0) {
           titleElement.innerHTML = 'App';
         } else {
           titleElement.innerHTML = `(${messageCount}) New messages`; 
         }
-
       }, 1000);
 
     </script>
