--- a/3-my-exercise-solutions/lesson-12/12c.html
+++ b/3-my-exercise-solutions/lesson-12/12c.html
@@ -14,13 +14,16 @@
 <!--    <script src="file.js"></script> -->
 
     <script>
-      const buttonElement = document.querySelector('.js-click-me-button');
-      const eventListener = () => {
+
         // setTimeout takes an anonymous function and a timeout value
         // In this case the system will wait 3 seconds then log 'timeout' 'timeout2'
-        setTimeout(function() { buttonElement.innerHTML = "Finished!"; }, 1000);
-      
+
+      const buttonElement = document.querySelector('.js-click-me-button');
+      const eventListener = () => 
+      { setTimeout(() => 
+        { buttonElement.innerHTML = "Finished!"; }, 1000); 
       };
+
       buttonElement.addEventListener('click', eventListener);
 
     </script>
