--- a/3-my-exercise-solutions/lesson-13/amazon.html
+++ b/3-my-exercise-solutions/lesson-13/amazon.html
@@ -56,8 +56,10 @@
 
       </div>
     </div>
-     <script src="scripts/amazon.js">
+    <script src="data/products.js">
+    </script>
 
+     <script src="scripts/amazon.js">
      </script>
-  </body>
+ </body>
 </html>
