--- a/3-my-exercise-solutions/lesson-13/amazon.html
+++ b/3-my-exercise-solutions/lesson-13/amazon.html
@@ -56,10 +56,13 @@
 
       </div>
     </div>
+    <script src="data/cart.js">
+    </script>
+
     <script src="data/products.js">
     </script>
 
-     <script src="scripts/amazon.js">
+ <script src="scripts/amazon.js">
      </script>
  </body>
 </html>
