Create function addToCart()

--- a/3-my-exercise-solutions/lesson-14/amazon.html
+++ b/3-my-exercise-solutions/lesson-14/amazon.html
@@ -57,6 +57,7 @@
       </div>
     </div>
 
+//Entry point - Imports from all the other files we have created    
  <script type="module" src="scripts/amazon.js" >
      </script>
  </body>
