import of calculateCartQuantity requires ../amazon.js / took back out script module cart.js

--- a/3-my-exercise-solutions/lesson-14/amazon.html
+++ b/3-my-exercise-solutions/lesson-14/amazon.html
@@ -59,5 +59,11 @@
 
    <script type="module" src="scripts/amazon.js" >
    </script>
+
+<!--
+   <script type="module" src="data/cart.js">
+   </script>
+-->
+   
  </body>
 </html>
