Removed Jasmine default tests and made tests for formatCurrency() using Jasmine.

--- a/3-my-exercise-solutions/lesson-16/tests/tests.html
+++ b/3-my-exercise-solutions/lesson-16/tests/tests.html
@@ -4,7 +4,7 @@
     <title>Tests</title>
   </head>
   <body>
-    <script type="module" src="./moneyTest.js">
+    <script type="module" src="./moneyTest.jshtml">
     </script>
   </body>
 </html>
