--- a/3-my-exercise-solutions/lesson-16/checkout.html
+++ b/3-my-exercise-solutions/lesson-16/checkout.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-checkout-header">
+    <div class="checkout-header js-checkout-header"></div>
     </div>
 
     <div class="main">
