Continued work on exercise 16N

--- a/3-my-exercise-solutions/lesson-16/tests/tests.html
+++ b/3-my-exercise-solutions/lesson-16/tests/tests.html
@@ -16,6 +16,7 @@
   
   <script src="utils/moneyTest.js" type="module"></script>
   <script src="checkout/orderSummaryTest.js" type="module"></script>
+  <script src="checkout/paymentSummaryTest.js" type="module"></script>
   <script src="data/cartTest.js" type="module"></script>
 
 
@@ -23,5 +24,6 @@
 
 <body>
   <div class="js-test-container"></div>
-</body>
+  <div class="cart-quantity js-cart-quantity"></div>
+  </body>
 </html>
