Added function updateCartQuantityIcon to calculate total cart quantity and display it on the go to cart icon so that it can be tested.  Renamed the HTML tags used to be js-cart-quantity-amazon, js-cart-quantity-order js-cart-quantity-purchase.  Call the new function from removeFromCart(), addToCart(), changeCartQuantity().  Changed code included in tests.html. Delete link does nothing.  Items in cart shown in order summary if deleted are still in the cart when returning to amazon page.

--- a/3-my-exercise-solutions/lesson-16/checkout.html
+++ b/3-my-exercise-solutions/lesson-16/checkout.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-checkout-header"></div>
+    <div class="checkout-header js-cart-quantity-order"></div>
     </div>
 
     <div class="main">
