--- a/3-my-exercise-solutions/lesson-16/tests/tests.html
+++ b/3-my-exercise-solutions/lesson-16/tests/tests.html
@@ -23,7 +23,14 @@
 </head>
 
 <body>
+  <div class="amazon-header-right-section">
+    <a class="cart-link header-link" href="checkout.html">
+      <img class="cart-icon" src="images/icons/cart-icon.png">
+      <div class="cart-quantity js-cart-quantity-amazon"-></div>
+    </a>
+  </div>
+
+
+
+
   <div class="js-test-container"></div>
-  <div class="cart-quantity js-cart-quantity"></div>
-  </body>
-</html>
