--- a/3-my-exercise-solutions/lesson-17/tests/tests.html
+++ b/3-my-exercise-solutions/lesson-17/tests/tests.html
@@ -18,6 +18,7 @@
   <script src="checkout/orderSummaryTest.js" type="module"></script>
   <script src="checkout/paymentSummaryTest.js" type="module"></script>
   <script src="data/cartTest.js" type="module"></script>
+  <script src="data/productsTest.js" type="module"></script>
 
 
 </head>
