Change function to top-level code in Lesson18.html

--- a/3-my-exercise-solutions/lesson-18/lesson18.html
+++ b/3-my-exercise-solutions/lesson-18/lesson18.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      function requestGreeting() {
+//      function requestGreeting() {
         const xhr = new XMLHttpRequest();
 
         xhr.addEventListener('load', () => {
@@ -18,8 +18,8 @@
   
     xhr.open('GET', 'https://supersimplebackend.dev/greeting');
     xhr.send();
-  }
-  requestGreeting();
+//  }
+//  requestGreeting();
     </script>
   </body>
 </html>
