--- a/3-my-exercise-solutions/lesson-18/lesson18.html
+++ b/3-my-exercise-solutions/lesson-18/lesson18.html
@@ -45,8 +45,44 @@
         return;
       }
       
+      async function requestGreetingAsyncAwait() {
+        try {
+          // throw 'error1';
+          // Returns a Response object
+          const response = await fetch('https://supersimplebackend.dev/greeting');
+          //const response = await fetch('https://superstupidbackend.dev/greeting');
+          // Cannot throw an error in the future
+          // reject lets you throw an error in the future
+          // throw 'error2'
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+
+          //Extract the text from the response
+          //Returns a Promise that resolves to the response's body content as a string
+          //Halts execution until the entire response has been received
+          const text = await response.text();
+          console.log(text);
+
+          // Return a value using a promise with resolve / reject
+          const value = await new Promise((resolve, reject) => {
+            resolve('value3');
+            //reject('error3')
+          });
+
+          // Log the resolved value from the promise
+          //console.log(value);
+        } // try
+        catch (error) {
+          console.log(`Error: ${error}`);
+        }
+        return;
+      }
+      
       requestGreeting();
       requestGreetingFetch();
-    </script>
+      requestGreetingAsyncAwait()
+
+</script>
   </body>
 </html> 
