--- a/3-my-exercise-solutions/lesson-18/checkout.html
+++ b/3-my-exercise-solutions/lesson-18/checkout.html
@@ -19,18 +19,9 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-cart-quantity-order"></div>
-    </div>
+    <div class="checkout-header js-cart-quantity-order">
 
-    <div class="main">
-      <div class="page-title">Review your order</div>
-
-      <div class="checkout-grid">
-        <div class="order-summary js-order-summary">
-        </div>
-
-        <div class="payment-summary js-payment-summary">
-
+      <div class="payment-summary js-payment-summary">
         </div>
       </div>
     </div>
