Removed separate function to update the cart quantity and incorporated that in renderOrderSummary() and rearranged HTML code.  Many tests failing because HTML setup needs to change.  Checkout page does not display.  tags are null.

--- a/3-my-exercise-solutions/lesson-18/checkout.html
+++ b/3-my-exercise-solutions/lesson-18/checkout.html
@@ -21,6 +21,8 @@
   <body>
     <div class="checkout-header js-cart-quantity-order">
 
+      <div class="order-summary js-order-summary">
+        
       <div class="payment-summary js-payment-summary">
         </div>
       </div>
