Addedjs-cart-quantity-order tag.  Will abandon these changes and start branch 18a-exercises from 3 commits ago because managing the checkout.html has gotten out of control.

--- a/3-my-exercise-solutions/lesson-13/checkout.html
+++ b/3-my-exercise-solutions/lesson-13/checkout.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header">
+    <div class="checkout-header js-cart-quantity-order">
       <div class="header-content">
         <div class="checkout-header-left-section">
           <a href="amazon.html">
@@ -77,6 +77,8 @@
                 <div class="delivery-options-title">
                   Choose a delivery option:
                 </div>
+
+
                 <div class="delivery-option">
                   <input type="radio" checked
                     class="delivery-option-input"
