--- a/3-my-exercise-solutions/lesson-13/checkout.html
+++ b/3-my-exercise-solutions/lesson-13/checkout.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-cart-quantity-order">
+    <div class="checkout-header">
       <div class="header-content">
         <div class="checkout-header-left-section">
           <a href="amazon.html">
@@ -77,8 +77,6 @@
                 <div class="delivery-options-title">
                   Choose a delivery option:
                 </div>
-
-
                 <div class="delivery-option">
                   <input type="radio" checked
                     class="delivery-option-input"
