Revert "Update checkout.html - Remove HTML lines to allow starting with order summary header"
This reverts commit 9b7b2de1f14c0a7953e54bff0bf03e2fb22365d7.

--- a/3-my-exercise-solutions/lesson-18/checkout.html
+++ b/3-my-exercise-solutions/lesson-18/checkout.html
@@ -19,9 +19,18 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-cart-quantity-order">
+    <div class="checkout-header js-cart-quantity-order"></div>
+    </div>
 
-      <div class="payment-summary js-payment-summary">
+    <div class="main">
+      <div class="page-title">Review your order</div>
+
+      <div class="checkout-grid">
+        <div class="order-summary js-order-summary">
+        </div>
+
+        <div class="payment-summary js-payment-summary">
+
         </div>
       </div>
     </div>
