Commented out extra </div> in checkout.html before class="main"

--- a/3-my-exercise-solutions/lesson-18/checkout.html
+++ b/3-my-exercise-solutions/lesson-18/checkout.html
@@ -20,8 +20,11 @@
   </head>
   <body>
     <div class="checkout-header js-cart-quantity-order"></div>
-    </div>
 
+    <!-- Works the same with or without this
+    </div>
+    -->
+    
     <div class="main">
       <div class="page-title">Review your order</div>
 
