Working exercise 18n - Create tracking.js.  Create functions to get an order and to get a product within an order.  Added code to set the URL parameters.  Generate HTML for the tracking page.  Added a loadTrackingPage function to get products array.  Tests all passing.  Tracking page does not display properly.  Tries to do a GET function to get the product image for some reason.

--- a/3-my-exercise-solutions/lesson-18/orders.html
+++ b/3-my-exercise-solutions/lesson-18/orders.html
@@ -29,7 +29,6 @@
       </div>
     </div>
 
-    <script type="module" src="scripts/orders.js">
-    </script>
+    <script type="module" src="scripts/orders.js"></script>
   </body>
 </html>
