--- a/3-my-exercise-solutions/lesson-18/tracking.html
+++ b/3-my-exercise-solutions/lesson-18/tracking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Tracking</title>
 
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="styles/pages/tracking.css">
   </head>
   <body>
-    <div class="amazon-header js-amazon-header">
 
     <script type="module" src="scripts/tracking.js">
     </script>
