Working Exercise 18o - Making tracking page interactive.  Corrected missing "." in '.current-status'.  Managed to incorporate UTC and Timezone extensions to dayjs.  Times coming from the back end were UTC but time from dayjs() is the local time zone.  Re-did the progress bar calculation and it is correct now.  Just need to fix the update progress label function.  newStatusLabel is non-null for all three cases.

--- a/3-my-exercise-solutions/lesson-18/tracking.html
+++ b/3-my-exercise-solutions/lesson-18/tracking.html
@@ -20,8 +20,15 @@
   </head>
   <body>
 
-    <script type="module" src="scripts/tracking.js">
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/timezone.min.js"></script>
+    <script>
+      dayjs.extend(window.dayjs_plugin_utc);
+      dayjs.extend(window.dayjs_plugin_timezone);
     </script>
+
+    <script type="module" src="scripts/tracking.js"></script>
 
   </body>
 </html>
