Exercise 18r - Added "Your search did not match any products" message to Amazon page.  Made search break down the search string into individual words and declare a match if at least one of the search words matches the product name or one of the keywords.

--- a/3-my-exercise-solutions/lesson-18/amazon.html
+++ b/3-my-exercise-solutions/lesson-18/amazon.html
@@ -52,6 +52,7 @@
     </div>
     
     <div class="main">
+      <div class="js-error-message hidden">Your search did not match any products.</div>
       <div class="products-grid js-products-grid">
 
       </div>
