Implemented "Your cart is empty" message on checkout page and "View Products" button to take you back to Amazon main page.  Added some lines to the HTML in the tests and all tests are passing.  Program working correctly.

--- a/3-my-exercise-solutions/lesson-18/checkout.html
+++ b/3-my-exercise-solutions/lesson-18/checkout.html
@@ -25,10 +25,18 @@
     -->
          
     <div class="checkout-header js-cart-quantity-order"></div>
+
+
       <div class="main">
-      <div class="page-title">Review your order</div>
+        <div class="page-title">Review your order</div>
+        <div class="cart-empty js-cart-empty hidden">Your cart is empty.</div>
+        <button class="view-products-button js-view-products-button hidden">View products</button>
         <div class="checkout-grid">
+
+
         <div class="order-summary js-order-summary"></div>
+
+
         <div class="payment-summary js-payment-summary"></div>
       </div>
     </div>
